# cora

cora/reflection/: refl_operators.h  reflection.h  reflection_stl.h
cora/serialization/: csv_io.h  json_io.h
cora/tests/: CMakeLists.txt
cora/tests/json_io_tests/: CMakeLists.txt  tests.hpp
